changed docker-compose.yml file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -288,9 +288,9 @@ services:
         condition: service_healthy
     environment:
       KAFKA_ZOOKEEPER_CONNECT: 'localhost:2181'
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_CREATE_TOPICS: "userprofile:1:1, book_details:1:1"
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://10.20.1.129:9092
+      KAFKA_LISTENERS: PLAINTEXT://10.20.1.129:9092
+      KAFKA_CREATE_TOPICS: "userprofile:1:1, book_details:1:1, order_details:1:1"
     restart: always
     healthcheck:
       test: "exit 0"
