--- a/GoDeliverFrontEnd/Dockerfile
+++ b/GoDeliverFrontEnd/Dockerfile
@@ -3,6 +3,8 @@ RUN mkdir -p /GoDeliver
 WORKDIR /GoDeliver
 COPY package.json /GoDeliver/
 RUN ["npm", "install"]
+RUN npm cache verify
+RUN npm audit fix
 COPY . /GoDeliver
 EXPOSE 4200/tcp
 CMD ["npm", "start", "--", "--host", "0.0.0.0", "--poll", "500"]
