docker file changed in angular

--- a/GoDeliverFrontEnd/Dockerfile
+++ b/GoDeliverFrontEnd/Dockerfile
@@ -1,9 +1,9 @@
-FROM node:8.11.4
+FROM node:latest
 RUN mkdir -p /GoDeliver
 WORKDIR /GoDeliver
 COPY package.json /GoDeliver/
-RUN ["npm", "install"]
+RUN npm install
 RUN npm cache verify
 COPY . /GoDeliver
 EXPOSE 4200/tcp
-CMD ["npm", "start", "--", "--host", "0.0.0.0", "--poll", "500"]
+CMD ["npm", "start", "--", "--host", "0.0.0.0", "--poll", "2000"]
