--- a/GoDeliverFrontEnd/package.json
+++ b/GoDeliverFrontEnd/package.json
@@ -41,6 +41,7 @@
     "multiple-checkboxes": "0.0.6",
     "ng2-charts": "^1.6.0",
     "ngx-pagination": "^3.2.0",
+    "ngx-spinner": "^6.1.2",
     "ngx-webstorage": "^2.0.1",
     "rxjs": "^6.0.0",
     "uuid": "^3.3.2",
