--- a/zuul-apigateway/Dockerfile
+++ b/zuul-apigateway/Dockerfile
@@ -1,10 +1,12 @@
 FROM java:8-jre
 
+MAINTAINER teja "tejakathari007@gmail.com"
+
 RUN mkdir /src
 
 WORKDIR /src
 
-ADD target/zuul-apigateway-1.0.0.jar /src/zuul-apigateway-1.0.0.jar
+COPY target/zuul-apigateway-1.0.0.jar /src/zuul-apigateway-1.0.0.jar
 
 EXPOSE 9088
 
